exercicio atualiado, nome html e class produto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="produtos">
-        <div class="produtos__produto">
+        <div class="produto">
             <img class="produto__imagem" src="https://via.placeholder.com/100x100">
             <h4 class="produto__nome">Nome do produto</h4>
             <p class="produto__descricao">
